--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,41 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{Endres2021,
+author = {Christian P. Endres and Marie-Aline Martin-Drumel and Oliver Zingsheim and Luis Bonah and Olivier Pirali and Tianwei Zhang and \'Alvaro S\'anchez-Monge and Thomas M\"oller and Nadine Wehres and Peter Schilke and Michael C. McCarthy and Stephan Schlemmer and Paola Caselli and Sven Thorwirth},
+title = {{SOLEIL and ALMA views on prototypical organic nitriles: \ce{C2H5CN}}},
+journal = {The Journal of Molecular Spectroscopy},
+volume = "375",
+pages = "111392",
+year = "2021",
+doi = {10.1016/j.jms.2020.111392},
+}
+
+@article{Buchanan2021,
+author = {Zachary Buchanan and Kin Long Kelvin Lee and Olivia Chitarra and Michael C. McCarthy and Olivier Pirali and Marie-Aline Martin-Drumel},
+title = {{A rotational and vibrational investigation of phenylpropiolonitrile (\ce{C6H5C3N})}},
+journal = {The Journal of Molecular Spectroscopy},
+volume = {377},
+pages = {111425},
+year = "2021",
+doi = {10.1016/j.jms.2021.111425},
+}
+
+@article{Endres2021b,
+author = {Christian P. Endres and Georg Ch. Mellau and Michael E. Harding and Marie-Aline Martin-Drumel and Holger Lichau and Sven Thorwirth},
+title = {{High-resolution infrared study of vinyl acetylene: The $\nu_{13}$ (214\,cm$^{-1}$) and $\nu_{18}$ (304\,cm$^{-1}$) fundamentals}},
+journal = {The Journal of Molecular Spectroscopy},
+volume = "",
+pages = "",
+year = "2021",
+doi = {},
+note = {accepted},
+}
+
+@article{Chitarra2021,
+author = {Olivia Chitarra and Marie-Aline Martin-Drumel and Zachary Buchanan and Olivier Pirali},
+title = {{Rotational and vibrational spectroscopy of 1-cyanoadamantane and 1-isocyanoadamantane}},
+journal = {The Journal of Molecular Spectroscopy},
+volume = "",
+pages = "",
+year = "2021",
+doi = {10.1016/j.jms.2021.111468},
+note = {accepted},
 }
