--- a/content/publication/endres-2021-b/cite.bib
+++ b/content/publication/endres-2021-b/cite.bib
@@ -4,7 +4,7 @@
  journal = {The Journal of Molecular Spectroscopy},
  note = {accepted},
  pages = {},
- title = {High-resolution infrared study of vinyl acetylene: The $ν_13$ (214\,cm$^-1$) and $ν_18$ (304\,cm$^-1$) fundamentals},
+ title = {High-resolution infrared study of vinyl acetylene: The $\uu_{13}$ (214\,cm$^-1$) and $\nu_{18}$ (304\,cm$^-1$) fundamentals},
  volume = {},
  year = {2021}
 }
