--- a/content/publication/endres-2021/cite.bib
+++ b/content/publication/endres-2021/cite.bib
@@ -1,9 +1,9 @@
 @article{Endres2021,
- author = {Christian P. Endres and Marie-Aline Martin-Drumel and Oliver Zingsheim and Luis Bonah and Olivier Pirali and Tianwei Zhang and Álvaro S\ńchez-Monge and Thomas Möller and Nadine Wehres and Peter Schilke and Michael C. McCarthy and Stephan Schlemmer and Paola Caselli and Sven Thorwirth},
+ author = {Christian P. Endres and Marie-Aline Martin-Drumel and Oliver Zingsheim and Luis Bonah and Olivier Pirali and Tianwei Zhang and Álvaro S\'anchez-Monge and Thomas Möller and Nadine Wehres and Peter Schilke and Michael C. McCarthy and Stephan Schlemmer and Paola Caselli and Sven Thorwirth},
  doi = {10.1016/j.jms.2020.111392},
  journal = {The Journal of Molecular Spectroscopy},
  pages = {111392},
- title = {SOLEIL and ALMA views on prototypical organic nitriles: ȩC2H5CN},
+ title = {SOLEIL and ALMA views on prototypical organic nitriles: C$_2$H$_5$CN},
  volume = {375},
  year = {2021}
 }
