--- a/content/publication/buchanan-2021/cite.bib
+++ b/content/publication/buchanan-2021/cite.bib
@@ -3,7 +3,7 @@
  doi = {10.1016/j.jms.2021.111425},
  journal = {The Journal of Molecular Spectroscopy},
  pages = {111425},
- title = {A rotational and vibrational investigation of phenylpropiolonitrile (ȩC6H5C3N)},
+ title = {A rotational and vibrational investigation of phenylpropiolonitrile (C$_6$H$_5$C$_3$N)},
  volume = {377},
  year = {2021}
 }
