--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -99,7 +99,7 @@
   translation: Interests
 
 - id: education
-  translation: Education
+  translation: Research Experience
 
 - id: user_profile_latest
   translation: Latest
