update publi AdaCN

--- a/content/publication/2021-chitarra-AdaCN/cite.bib
+++ b/content/publication/2021-chitarra-AdaCN/cite.bib
@@ -2,10 +2,9 @@
  author = {Olivia Chitarra and Marie-Aline Martin-Drumel and Zachary Buchanan and Olivier Pirali},
  doi = {10.1016/j.jms.2021.111468},
  journal = {The Journal of Molecular Spectroscopy},
- note = {accepted},
- pages = {},
+ pages = {111468},
  title = {Rotational and vibrational spectroscopy of 1-cyanoadamantane and 1-isocyanoadamantane},
- volume = {},
+ volume = {378},
  year = {2021}
 }
 
