--- a/content/publication/2021-endres-vinylacetylene/cite.bib
+++ b/content/publication/2021-endres-vinylacetylene/cite.bib
@@ -1,11 +1,10 @@
 @article{Endres2021b,
  author = {Christian P. Endres and Georg Ch. Mellau and Michael E. Harding and Marie-Aline Martin-Drumel and Holger Lichau and Sven Thorwirth},
- doi = {},
  journal = {The Journal of Molecular Spectroscopy},
- note = {accepted},
- pages = {},
  title = {High-resolution infrared study of vinyl acetylene: The $\nu_{13}$ (214 cm$^{-1}$) and $\nu_{18}$ (304 cm$^{-1}$) fundamentals},
- volume = {},
- year = {2021}
+volume = {379},
+pages = {111469},
+year = {2021},
+doi = {https://doi.org/10.1016/j.jms.2021.111469},
 }
 
