--- a/content/publication/2021-chitarra-DCBs/cite.bib
+++ b/content/publication/2021-chitarra-DCBs/cite.bib
@@ -1,10 +1,11 @@
-@article{Chitarra2021,
- author = {Olivia Chitarra and Marie-Aline Martin-Drumel and Zachary Buchanan and Olivier Pirali},
- doi = {10.1016/j.jms.2021.111468},
- journal = {The Journal of Molecular Spectroscopy},
- pages = {111468},
- title = {Rotational and vibrational spectroscopy of 1-cyanoadamantane and 1-isocyanoadamantane},
- volume = {378},
- year = {2021}
+@article{Chitarra2021-DCBs,
+ author = {Olivia Chitarra and Kin Long Kelvin Lee and Zachary Buchanan and Mattia Melosso and Brett A. McGuire and Manuel Goubet and Olivier Pirali and Marie-Aline Martin-Drumel},
+ doi = {10.1051/0004-6361/202141386},
+ journal = {Astronomy \& Astrophysics},
+ pages = {},
+ title = {Hunting the relatives of benzonitrile: Rotational spectroscopy of dicyanobenzenes},
+ volume = {},
+ year = {2021},
+ note = {in press}
 }
 
