--- a/content/publication/2021-chitarra-DCBs/cite.bib
+++ b/content/publication/2021-chitarra-DCBs/cite.bib
@@ -2,10 +2,9 @@
  author = {Olivia Chitarra and Kin Long Kelvin Lee and Zachary Buchanan and Mattia Melosso and Brett A. McGuire and Manuel Goubet and Olivier Pirali and Marie-Aline Martin-Drumel},
  doi = {10.1051/0004-6361/202141386},
  journal = {Astronomy \& Astrophysics},
- pages = {},
  title = {Hunting the relatives of benzonitrile: Rotational spectroscopy of dicyanobenzenes},
- volume = {},
+	volume = 652,
+	pages = "A163",
  year = {2021},
- note = {in press}
 }
 
