--- a/content/publication/2021-chitarra-DCBs/cite.bib
+++ b/content/publication/2021-chitarra-DCBs/cite.bib
@@ -3,8 +3,8 @@
  doi = {10.1051/0004-6361/202141386},
  journal = {Astronomy \& Astrophysics},
  title = {Hunting the relatives of benzonitrile: Rotational spectroscopy of dicyanobenzenes},
-	volume = 652,
-	pages = "A163",
+ volume = {652},
+ pages = {A163},
  year = {2021},
 }
 
