--- a/content/publication/2022-mammez-NH3laser/cite.bib
+++ b/content/publication/2022-mammez-NH3laser/cite.bib
@@ -2,8 +2,8 @@
 author = {Mammez, Marie-Hélène and Buchanan, Zachary and Pirali, Olivier and Martin-Drumel, Marie-Aline and Turut, Joan and Ducournau, Guillaume and Eliet, Sophie and Hindle, Francis and Barbieri, Stefano and Roy, Pascale and Mouret, Gaël and Lampin, Jean-François},
 title = {Optically Pumped Terahertz Molecular Laser: Gain Factor and Validation up to 5.5 THz},
 journal = {Advanced Photonics Research},
-volume = {},
-number = {},
+volume = {3},
+number = {4},
 pages = {2100263},
 keywords = {ammonia, mid-infrared quantum cascade laser pump, optical gain factor, THz molecular laser},
 doi = {10.1002/adpr.202100263},
