--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -85,7 +85,8 @@
   translation: Poster
 
 - id: btn_source
-  translation: Source Document
+#  translation: Source Document
+  translation: HAL
 
 - id: btn_copy
   translation: Copy
