update doi CH2CN

--- a/content/publication/2022-chitarra-CH2CN/cite.bib
+++ b/content/publication/2022-chitarra-CH2CN/cite.bib
@@ -4,6 +4,8 @@
   year = {2022},
   month = oct,
   journal = {J. Phys. Chem. A},
-  pages = {acs.jpca.2c04399},
+  volume = {126},
+  number = {41},
+  pages = {7502--7513},
   doi = {10.1021/acs.jpca.2c04399}
 }
